add update metod and delete
