# app/Http/Controllers/StudioResourceController.php
@@ -2,15 +2,13 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Requests\SettingCreateRequest;
-use App\Http\Requests\SettingListRequest;
 use App\Http\Requests\StudioResourceCreateRequest;
 use App\Http\Requests\StudioResourceListRequest;
-use App\Http\Resources\SettingResource;
+use App\Http\Requests\StudioResourceUpdateRequest;
 use App\Http\Resources\StudioResourceResource;
+use App\Models\StudioResource;
 use App\Services\StudioResourceService;
 use Illuminate\Http\JsonResponse;
-use Illuminate\Http\Request;
 
 class StudioResourceController extends ApiController
 {
@@ -91,5 +89,63 @@ class StudioResourceController extends ApiController
         $studioResource = $this->service->create($request->validated());
 
         return $this->successResponseWithData(new StudioResourceResource($studioResource));
+    }
+
+    /**
+     * Update the specified studio resource in storage.
+     *
+     * @OA\Put(
+     *     path="/api/v1/resources/{id}",
+     *     operationId="StudioResourceUpdate",
+     *     tags={"StudioResources"},
+     *     @OA\Parameter(
+     *      name="id", in="path", required=true, @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *      name="type", in="query", required=true, @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *      name="file", in="query", required=true, @OA\Schema(type="file")
+     *     ),
+     *     @OA\Response(response="200", description="Return the updated StudioResource"),
+     *     @OA\Response(response="403", description="StudioResource is forbidden"),
+     *     @OA\Response(response="404", description="StudioResource not found"),
+     * )
+     *
+     * @param StudioResourceUpdateRequest $request
+     * @param StudioResource $studioResource
+     * @return JsonResponse
+     */
+    public function update(StudioResourceUpdateRequest $request, StudioResource $studioResource): JsonResponse
+    {
+        $this->service->update($studioResource, $request->validated());
+
+        return $this->successResponseWithData(new StudioResourceResource($studioResource));
+    }
+
+    /**
+     * Remove the specified studioresource from storage.
+     *
+     * @OA\Delete(
+     *     path="/api/v1/resources/{id}",
+     *     operationId="StudioResourceDelete",
+     *     tags={"StudioResources"},
+     *     @OA\Parameter(
+     *      name="id", in="path", required=true, @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="200", description="The studioresource has been successfuly deleted"),
+     *     @OA\Response(response="403", description="The studioresource is forbidden"),
+     *     @OA\Response(response="404", description="Studioresource not found"),
+     * )
+     *
+     * @param StudioResource $studioResource
+     * @return JsonResponse
+     */
+    public function destroy(StudioResource $studioResource): JsonResponse
+    {
+        dd($studioResource->id);
+        $this->service->delete($studioResource);
+
+        return $this->successResponse();
     }
 }
